# bancho.py

./: .dockerignore  .env.example  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: bg_loops.py  (+4 more)
guweb/: .gitignore  DESIGN_CONSISTENCY.md  Dockerfile  config.py  main.py  pyproject.toml  setup_guweb.sh  start.sh  utils.py
guweb/blueprints/: __init__.py  admin.py  frontend.py  helpers.py
guweb/constants/: __init__.py  regexes.py
guweb/frontend/: .gitignore  README.md  package.json  tsconfig.json  vite.config.ts
guweb/frontend/src/: App.vue  env.d.ts  main.ts
guweb/frontend/src/api/: beatmaps.ts  client.ts  leaderboard.ts  users.ts
guweb/frontend/src/components/: HomePage.vue  ProfilePage.vue  ScoreList.vue
guweb/frontend/src/composables/: useGameMode.ts
guweb/objects/: __init__.py  email_utils.py  glob.py  logUtils.py  sendemail.py  utils.py
guweb/static/: test-shiina.html
guweb/static-new/css/: hanayo-enhancements.css.bak  hanayo-unified.css  style.css.bak  unified-theme.css.bak
guweb/static-new/js/: search.js
guweb/static/css/: README.md  design-system.css  inlayo-template.css  inlayo-template.css.old  main.css  main.css.backup  shiina-modern.css  style-new.css  style.css  unified-theme.css
guweb/static/js/: README.md  main.js
guweb/templates/: 404.html  base.html  base_old.html  beatmap.html  error.html  forgot.html  forgot_password.html  forgot_username.html  home.html  howtoconnect.html  leaderboard.html  login.html  profile.html  register.html  reset_password.html  rules.html  score.html  topplays.html  verify.html  verify_email.html
guweb/templates-new/: 404.html  base.html  error.html  forgot.html  leaderboard.html  login.html  rules.html  score.html  topplays.html  verify.html
guweb/templates-new/admin/: home.html
guweb/templates-new/clans/: leaderboard.html  profile.html
guweb/templates-new/settings/: profile.html
guweb/templates/admin/: base.html  home.html
guweb/templates/clans/: leaderboard.html  profile.html  settings.html
guweb/templates/components/: footer.html  navbar.html  navbar_old.html
guweb/templates/settings/: avatar.html  custom.html  password.html  profile.html
(+68 files in other folders)
