[tool.poetry]
name = "guweb"
version = "1.3.0"
description = "The frontend appearance for Inlayo osu! server"
authors = ["Inlayo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.0"
aiohttp = "^3.9.0"
orjson = "^3.9.0"
bcrypt = "^4.1.0"
pillow = "^10.0.0"
timeago = "^1.0.16"
hypercorn = "^0.16.0"
aiomysql = "^0.2.0"
redis = "^5.0.0"
discord-webhook = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
