[tool.poetry]
name = "guweb"
version = "1.3.0"
description = "The frontend appearance for the osu! server protocol, bancho.py"
authors = ["Varkaria <varkaria@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.19.0"
bcrypt = "^4.0.1"
aiomysql = "^0.2.0"
aiohttp = "^3.9.0"
mysql-connector-python = "^8.0.33"
orjson = "^3.9.0"
timeago = "^1.0.16"
markdown2 = "^2.4.0"
Pillow = "^10.0.0"
hypercorn = "^0.16.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
types-aiofiles = "^23.0.0"

[tool.mypy]
python_version = "3.11"
exclude = ["^(?!guweb).*"]
explicit_package_bases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
